# ra2-mod

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-11-ra2-modder-v2.md  2026-04-11-ra2-modder.md
docs/superpowers/specs/: 2026-04-11-ra2-modder-design.md
docs/wiki/: api-routes.md  architecture.md  database-indexing.md  ini-system.md  patch-system.md  ra2-modding-concepts.md  rendering-pipeline.md
ra2modder/: __main__.py  app.py  config.py
ra2modder/csf/: reader.py
ra2modder/db/: indexer.py  queries.py
ra2modder/ini/: ares_schema.py  art.py  parser.py  phobos_schema.py  rules.py
ra2modder/mix/: loader.py
ra2modder/patch/: manager.py  writer.py
ra2modder/render/: cache.py  palette.py  shp.py  vxl.py
ra2modder/routes/: assets.py  objects.py  patch_view.py  sprites.py
static/: app.css
templates/: base.html
templates/pages/: assets.html  object_list.html  patch.html
templates/partials/: detail_tabs.html  diff_line.html  tech_tree.html  unit_card.html  unit_cards.html
tests/: test_csf_reader.py  test_db_indexer.py  test_ini_parser.py  test_mix_loader.py  test_patch_manager.py  test_routes.py  test_rules_merger.py  test_shp_renderer.py  test_vxl_renderer.py
